test/netlist/error/any-loop-index.bop
A(a:[5]) = b:[5]
where
  for _ = 0 to 4
    b[_] = not(a[_]);
  end for;
end where;
